--- a/templates/prev_orders.html
+++ b/templates/prev_orders.html
@@ -19,10 +19,10 @@
                            border: 1px solid black;border-radius:50% !important;">
 
             <tr style="background: linear-gradient(to right, #000000, #434343);">
-                <th style=" text-align: center;padding: 8px 8px;display: table-cell;vertical-align: top;">Date</th>
-                <th style=" text-align: center;padding: 8px 8px;display: table-cell;vertical-align: top;">Customer Name</th>
-                <th style=" text-align: center;padding: 8px 8px;display: table-cell;vertical-align: top;">Address</th>
-                <th style=" text-align: center;padding: 8px 8px;display: table-cell;vertical-align: top;">Order Details</th>
+                <th scope="col" style=" text-align: center;padding: 8px 8px;display: table-cell;vertical-align: top;">Date</th>
+                <th scope="col" style=" text-align: center;padding: 8px 8px;display: table-cell;vertical-align: top;">Customer Name</th>
+                <th scope="col" style=" text-align: center;padding: 8px 8px;display: table-cell;vertical-align: top;">Address</th>
+                <th scope="col" style=" text-align: center;padding: 8px 8px;display: table-cell;vertical-align: top;">Order Details</th>
             </tr>
             {% for i in prev_orders %}
             <tr style="background: linear-gradient(to right, #000000, #0f9b0f); ">
