--- a/templates/custdash.html
+++ b/templates/custdash.html
@@ -61,7 +61,7 @@ background-size: cover;background-repeat:no-repeat;width:90%;margin:0 auto;heigh
                     </div>
                     <div class="form-group">
                         <button class="btn btn-lg btn-block button1">
-                            <span>Send Comment</span>
+                            <span>Place Order</span>
                         </button>
                     </div>
                 </div>
